--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,12 @@ body {
   margin: 0;
 }
 
+/*Typography control section*/
+
+body p{
+  font-family: "FuturaTEE", sans-serif;
+}
+
 article,
 aside,
 footer,
@@ -21,10 +27,31 @@ section {
   display: block;
 }
 
+div{
+  font-family: "Bebas Neue", sans-serif;
+}
+div h1{
+  letter-spacing: 3px;
+}
+div h2{
+  letter-spacing: 3px;
+}
+div p{
+  font-family: "FuturaTEE", sans-serif;
+  letter-spacing: px;
+}
+
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
+  font-family: "Bebas Neue", sans-serif;
+  letter-spacing: 3px;
+  font-weight: 700;
 }
+
+/*h1,h2,h3{
+  font-family: "Bebas Neue", sans-serif;
+}*/
 
 figcaption,
 figure,
@@ -52,6 +79,7 @@ a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
   text-decoration: none;
+  font-family: "FuturaTEE", sans-serif;
 }
 
 a:active,
@@ -155,10 +183,14 @@ select {
     color: #8e1e34!important;
     background-color: transparent;
     border-color: #47101b!important;
+    font-family: "Bebas Neue", sans-serif;
+    letter-spacing: 3px;
 }
 .btn-outline-success:hover{
   background-color:#47101b!important;
   color:#fff!important;
+  font-family: "Bebas Neue", sans-serif;
+  letter-spacing: 3px;
 }
 
 
@@ -178,20 +210,18 @@ select {
   margin:95px 10px 0px 10px;
 }
 
-h1,h2,h3,h4{
-  font-weight: 700;
-}
 
 /*CSS Markup for the first section of the homepage*/
 .hero-cta{
   background: #47101b url('../images/large2.jpg');
   /*min-height: 600px*/
-  height: 80vh;
+  height: 90vh;
   background-size: cover;
   background-attachment: fixed;
   position: relative;
   transition: background-image 1.5s linear;
   -webkit-transition: background-image 1.5s ease-out;
+
 }
 
 .hero-cta:hover {
@@ -216,6 +246,7 @@ background-image: url('../images/look2b.jpg');
   position: absolute;
   width: 450px;
   height: 300px;
+
 }
 
 .hero-txt .form-control{
@@ -228,6 +259,8 @@ background-image: url('../images/look2b.jpg');
     background-color: rgba(167, 154, 154, 0.22);
     border: 1px solid rgba(0,0,0,.15);
     border-radius: .15rem;
+    font-family: "Bebas Neue", sans-serif;
+    letter-spacing: 3px;
 }
 
 
@@ -236,6 +269,7 @@ background-image: url('../images/look2b.jpg');
 /*Featured categories section*/
 .sc-category{
   min-height: 800px;
+    font-family: "FuturaTEE", sans-serif;
 }
 .unit {
   margin: 0 0!important;
@@ -267,14 +301,17 @@ background-image: url('../images/look2b.jpg');
   padding: 2px 20px;
 }
 
+.sc-heading{
+  font-family: "Bebas Neue", sans-serif;
+  letter-spacing: 3px;
 
+}
 /*How it works*/
 .htworks{
   background: #11100b;
   margin:0 0;
   padding: 80px 0px;
   color:#eee;
-
 }
 
 .htworks_content{
@@ -326,12 +363,11 @@ background-image: url('../images/look2b.jpg');
 }
 
 .testimonial__image{
-  max-height: 450px;
+  max-height: 400px;
 }
 
 .carousel-item{
-  padding: 100px 12px;
-  border:1px solid #eee;
+  padding: 70px 12px;
   /*background: #fff;*/
 
 }
@@ -342,22 +378,32 @@ background-image: url('../images/look2b.jpg');
 
 .carousel-item .col{
   background: #fff;
-  padding:30px 30px;
+  border:1px solid #dedede;
+  padding: 40px 30px;
 }
+
+.tc_color li {
+    background-color: #333!important/*css selector to color the carousel indicators*/
+}
+.carousel-indicators .active {
+    background-color: rgba(233, 30, 99, 0.91)!important;
+}
+
+
 
 /*Style PreFooter*/
 .pre-footer{
   margin-top: 0px;
 }
 .pre-footer > .card-group{
-  border-radius: 0px!important;
-  -webkit-border-radius: 0px!important;
+  cursor: pointer;
 }
-
-
-
-
-
+.pre-footer_card{
+  border-radius: 0px!important;
+}
+.pre-footer .card:hover{
+  filter:opacity(60%);
+}
 
 
 
@@ -365,6 +411,25 @@ background-image: url('../images/look2b.jpg');
 
 
 /*Begin styling for footer section here*/
+.footer{
+  color: #333;
+}
+
+.footer_nologo{
+  margin-top:60px;
+}
+
 .footer a{
   display: block;
+  color: #333;
+  font-size: 14px;
+}
+
+.footer a:hover{
+  color: #47101b;
+  /*text-decoration: none;*/
+}
+.footer .title{
+  font-weight:700;
+  font-size: 18px;
 }
