--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins');
 /*Bootstrap Reboot CSS */
 /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
 html {
@@ -38,7 +39,7 @@ div h2{
 }
 div p{
   font-family: "FuturaTEE", sans-serif;
-  letter-spacing: px;
+  letter-spacing: 0px;
 }
 
 h1 {
@@ -246,8 +247,8 @@ background-image: url('../images/look2b.jpg');
   position: absolute;
   width: 450px;
   height: 300px;
-
 }
+
 
 .hero-txt .form-control{
     display: block;
@@ -261,6 +262,12 @@ background-image: url('../images/look2b.jpg');
     border-radius: .15rem;
     font-family: "Bebas Neue", sans-serif;
     letter-spacing: 3px;
+}
+
+.login-bg{
+  background: url('../images/look10-2.jpg');
+  background-size: cover;
+  min-height: 100%;
 }
 
 
@@ -347,7 +354,13 @@ background-image: url('../images/look2b.jpg');
   margin-bottom: 10px;
 }
 
+/*Filter Sidebar*/
+.sidebar-module{
 
+}
+.sidebar-module li{
+  list-style: none;
+}
 
 
 
@@ -390,6 +403,42 @@ background-image: url('../images/look2b.jpg');
 }
 
 
+/*STYLING FOR CATALOG HTML PAGE*/
+.filter-top{
+  margin: 0px 50px 0px 0px;
+
+}
+
+.filter-top .nav-tabs{
+  border: 1px 0px solid #ddd;
+  margin-bottom: 40px;
+  align-items: center;
+}
+.filter-top .nav-tabs .dropdown-menu a{
+  border-bottom: 1px solid #ddd;
+}
+
+.filter-top li{
+  padding: 10px 10px;
+  border-right: 1px solid #eee;
+}
+.filter-top a{
+  color: inherit;
+}
+.filter-top a:hover{
+  color: inherit;
+}
+
+
+
+
+
+
+
+
+
+
+
 
 /*Style PreFooter*/
 .pre-footer{
@@ -398,9 +447,11 @@ background-image: url('../images/look2b.jpg');
 .pre-footer > .card-group{
   cursor: pointer;
 }
-.pre-footer_card{
-  border-radius: 0px!important;
+.pre-footer .card-img-top {
+   border-top-right-radius: 0;
+   border-top-left-radius: 0;
 }
+
 .pre-footer .card:hover{
   filter:opacity(60%);
 }
